jPlayer 2.2.0~core2

	* Updated to work with Core 2.5.6
	-- Charlie Powell <charlie@eval.bz>  Wed, 05 Jun 2013 05:05:34 -0400

jPlayer 2.2.0~core1

	* [Feature] [2.1.1] New Feature: Added RTMP support to the Flash fallback. Enables the supplied
	  options: rtmpv and rtmpa for video and media RTMP streams respectively. RTMP feature developed by
	  Robert M. Hall in this GitHub fork github.com/rmhall/jPlayer of jPlayer.
	* [Feature] [2.1.2] New Feature: The Flash SWF jPlayer version number is once again displayed when
	  visiting the URL directly.
	* New upstream version!
	* [2.1.2] Security Fix: The Flash SWF had a security vulnerability that could be exploited to steal
	  cookies from the domain hosting the SWF. Reported by Jason Calvert.
	* [2.1.3] Bug Fix: Affecting iOS and Blackberry. iOS 5.1 sometimes fails to give the media.duration
	  and it remains a NaN. Blackberry OS7 gives the initial media.duration as Infinity. jPlayer now
	  leaves the status.duration at zero until the media.duration is finite.
	* [2.1.4] Bug Fix: The RTMP solution locked up when the stop button/command was used, and when the
	  progress bar was used while paused. Both issues were related to pause(time) causing a locked-up
	  state.
	* [2.1.4] Bug Fix: The RTMP solution generated the progress event forever. The timeupdate event now
	  only occurs while playing. ie., It used to happen during the locked-up state.
	* [2.1.5] jQuery: The jQuery.browser sniffer is deprecated in jQuery and will be removed in the
	  future. All browser sniffing now uses code internal to jPlayer. ie., jQuery.jPlayer.browser
	* [2.1.6] Bug Fix: The CSS skins were changed to work with Popcorn. The position:relative; rule was
	  removed from the container as this corrupted popcorn plugin placement over the video. Negative
	  margins have been used instead to align video play button. As a result, the video play button
	  graphic is now the active area for clicks.
	* Upstream released on 13th September 2012